--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,12 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<!--追加-->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>requires to access photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>requires to use your camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>requires to use your microphone</string>
 </dict>
 </plist>
