--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sqflite: ^2.0.2 # 追加
   image_picker: ^0.8.5+3 # 追加
   path_provider: ^2.0.11 #追加
+  geolocator: ^7.0.3 #追加
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
