--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   path_provider: ^2.0.11 #追加
   geolocator: ^7.0.3 #追加
 
+  health: ^4.1.1 #追加
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
