--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
 
   geolocator: ^7.0.3 #追加
 
+  health: ^4.1.1 #追加
+  permission_handler: ^10.0.0 #追加
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
