Finish required functions on the calendar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   flutter_hooks: ^0.18.2+1 #追加_map
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.3
   google_maps_flutter: ^2.1.8 #追加_map
   google_maps_flutter_web: ^0.4.0 #追加_map
+  geolocator: ^8.1.0
 
 dev_dependencies:
   flutter_test:
